[package]
name = "cv-tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
parsing = { git = "https://github.com/hehaowen00/parsing.git" }
tokio = { version = "1.11.0", features = ["full"] }
superluminal-perf = "0.1.0"
