[package]
name = "cv-tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#debug = true

[dependencies]
# parsing = { git = "https://github.com/hehaowen00/parsing.git" }
tokio = { version = "1.11.0", features = ["full"] }
superluminal-perf = "0.1.0"
async-channel = "1.6.1"
num_cpus = "1.13.0"
libc = "0.2"
chashmap = "2.2.2"
